# rmindmap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  boxnode.h  main.cpp  menustyleitem.cpp  menustyleitem.ui  mindmap.cpp  mindmap.h  rmindmap.pro  rmindmap.qrc  theme.cpp  theme.hpp
data/: canada.rmap
resources/qml/: ButtonGrid.qml  Link.qml  MindMap.qml  MindMenu.qml  Node.qml  NodeSettingPopup.qml  PackageItem.qml  SideMenu.qml  main.qml
src/: edge.cpp  edge.h  graphcommonmodel.cpp  graphcommonmodel.h  graphedgemodel.cpp  graphedgemodel.h  graphitemmodel.cpp  graphitemmodel.h  graphwidget.cpp  graphwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  menustyleitem.cpp  menustyleitem.h  menustyleitem.ui  mindmap.cpp  mindmap.h  mindmapview.cpp  mindmapview.h  mindtoolbar.cpp  mindtoolbar.h  node.cpp  node.h  serializable.h
src/browser/: browser.pri  itembrowser.cpp  itembrowser.h  itembrowsermodel.cpp  itembrowsermodel.h
src/command/: additemcommand.cpp  additemcommand.h  addlinkcommand.h  addnodecommand.cpp  addnodecommand.h  addpackagecommand.cpp  addpackagecommand.h  commandhelper.h  dragnodecommand.cpp  dragnodecommand.h  removenodecommand.cpp  removenodecommand.h  reparentingnodecommand.cpp  reparentingnodecommand.h
src/controller/: mindmapcontroller.cpp  mindmapcontroller.h  selectioncontroller.cpp  selectioncontroller.h  sidemenucontroller.cpp  sidemenucontroller.h  spacingcontroller.cpp  spacingcontroller.h
src/data/: link.cpp  link.h  linkcontroller.cpp  linkcontroller.h  minditem.cpp  minditem.h  mindnode.cpp  mindnode.h  nodestyle.cpp  nodestyle.h  packagenode.cpp  packagenode.h  positioneditem.cpp  positioneditem.h
src/detailpanel/: detailpanel.cpp  detailpanel.h  detailpanel.pri  detailpanel.ui
src/geometry/: linknode.cpp  linknode.h
src/items/: edge.cpp  edge.h  edgebreak.cpp  edgebreak.h  genericmindmapitem.cpp  genericmindmapitem.h  items.pri  node.cpp  node.h  packageitem.cpp  packageitem.h  selectionitem.cpp  selectionitem.h
src/model/: boxmodel.cpp  boxmodel.h  linkmodel.cpp  linkmodel.h  minditemmodel.cpp  minditemmodel.h  nodeimageprovider.cpp  nodeimageprovider.h  nodestylemodel.cpp  nodestylemodel.h
src/preferences/: preferencesmanager.cpp  preferencesmanager.h
src/qmlItems/: linkitem.cpp  linkitem.h  nodeitem.cpp  nodeitem.h
src/stringmanager/: stringmanager.cpp  stringmanager.h  stringmanager.pri
src/widgets/: colorbutton.cpp  colorbutton.h  scenepropertiesdialog.cpp  scenepropertiesdialog.h  scenepropertiesdialog.ui  timelinewidget.cpp  timelinewidget.h  widgets.pri
src/worker/: fileserializer.cpp  fileserializer.h  theme.cpp  theme.h
